fixed screen reader for hidden table columns on mobile

--- a/express/code/blocks/comparison-table-v2/comparison-table-v2.css
+++ b/express/code/blocks/comparison-table-v2/comparison-table-v2.css
@@ -356,6 +356,7 @@ main .comparison-table-v2 .sticky-header .plan-cell p {
 
 .comparison-table-v2 .invisible-content {
     display: none;
+    visibility: hidden;
 }
 
 .comparison-table-v2 .table-container table.hide-table {
